--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center text-light">
-      <img src="img/cr1.jpg" alt="Muhammad Aditya Pratama" width="200" class="rounded-circle img-thumbnail" />
+      <img src="cr1.jpg" alt="Muhammad Aditya Pratama" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Aditya Pratama</h1>
       <p class="lead">Student | International Women University <i class="bi bi-check2-circle text-primary"></i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,288L1440,96L1440,320L0,320Z"></path></svg>
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g1.jpg" class="card-img-top" alt="Kegiatan Rohani Santriat">
+              <img src="g1.JPG" class="card-img-top" alt="Kegiatan Rohani Santriat">
               <div class="card-body">
                 <p class="card-text">Kegiatan rutinitas yang diadakan setiap hari sabtu atau malam minggu untuk meningkatkan iman & takwa para santriat.</p>
               </div>
@@ -185,7 +185,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g2.jpg" class="card-img-top" alt="Kegiatan Rohani Santriwati">
+              <img src="g2.JPG" class="card-img-top" alt="Kegiatan Rohani Santriwati">
               <div class="card-body">
                 <p class="card-text">Para santriwati pun ikut berpartisipasi dengan santriat untuk mendengarkan tausiah yang bertempat di masjid santriat.</p>
               </div>
@@ -193,7 +193,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g3.jpg" class="card-img-top" alt="Kegiatan Munggahan Santriwati">
+              <img src="g3.JPG" class="card-img-top" alt="Kegiatan Munggahan Santriwati">
               <div class="card-body">
                 <p class="card-text">Ini merupakan kegiatan semua umat muslim dalam rangka menyambut datangnya bulan suci Ramadhan, Santriwati ikut berpartisipasi.</p>
               </div>
@@ -201,7 +201,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g4.jpg" class="card-img-top" alt="Kegabutan Seksi Dokumentasi">
+              <img src="g4.JPG" class="card-img-top" alt="Kegabutan Seksi Dokumentasi">
               <div class="card-body">
                 <p class="card-text">Momen kami dimana tidak ada job, Disitulah kami melakukan photo shoot untuk menghilankan kejenuhan.</p>
               </div>
@@ -209,7 +209,7 @@
           </div>    
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g5.jpg" class="card-img-top" alt="Izin Pulang Santriwati">
+              <img src="g5.JPG" class="card-img-top" alt="Izin Pulang Santriwati">
               <div class="card-body">
                 <p class="card-text">Dokumentasi santriwati yang meminta izin pulang kepada pihak Dewan santri atau pengurus pondok.</p>
               </div>
@@ -217,7 +217,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g6.jpg" class="card-img-top" alt="Bimbingan Seksi Dokumentasi">
+              <img src="g6.JPG" class="card-img-top" alt="Bimbingan Seksi Dokumentasi">
               <div class="card-body">
                 <p class="card-text">Setiap kegiatan kami pasti ada kekurangan, Kami melaksanakan diskusi untuk mengevaluasinya.</p>
               </div>
@@ -225,7 +225,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g7.jpg" class="card-img-top" alt="Kegiatan Munggahan Santriat">
+              <img src="g7.JPG" class="card-img-top" alt="Kegiatan Munggahan Santriat">
               <div class="card-body">
                 <p class="card-text">Selain santriwati, Kami juga mendokumentasikan para santriat yang berpartisipasi dalam acara munggahan.</p>
               </div>
@@ -233,7 +233,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g8.jpg" class="card-img-top" alt="Lomba Volly Al-falah">
+              <img src="g8.jpg" class="card-img-top" alt="Lomba Volly Al-falah">
               <div class="card-body">
                 <p class="card-text">Selain mengaji, Pesantren pun mengadakan perlombaan bola volly antar asrama yang diikuti 7 asrama.</p>
               </div>
@@ -241,7 +241,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g9.jpg" class="card-img-top" alt="Foto Bersama Asrama Al-Falah">
+              <img src="g9.JPG" class="card-img-top" alt="Foto Bersama Asrama Al-Falah">
               <div class="card-body">
                 <p class="card-text">Momen ketika kami dari asrama Al-falah sebelum berpisah ke rumah masing-masing (Kelulusan).</p>
               </div>
@@ -249,7 +249,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g10.jpg" class="card-img-top" alt="Foto Bersama Kelas Multimedia">
+              <img src="g10.jpg" class="card-img-top" alt="Foto Bersama Kelas Multimedia">
               <div class="card-body">
                 <p class="card-text">3 bulan kami belajar dan akhirnya setelah melaksanakan Ujian Praktik Kejuruan (UPK) kami mendokumentasikannya.</p>
               </div>
@@ -257,7 +257,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g11.jpg" class="card-img-top" alt="Foto Bersama PD IWU">
+              <img src="g11.jpg" class="card-img-top" alt="Foto Bersama PD IWU">
               <div class="card-body">
                 <p class="card-text">Di awal masuk perguruan tinggi, Saya tertarik untuk mengikuti Unit Kegiatan Mahasiswa (UKM) Perisai Diri IWU ini.</p>
               </div>
@@ -265,7 +265,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g12.jpg" class="card-img-top" alt="Foto Bersama Latihan PD IWU">
+              <img src="g12.jpg" class="card-img-top" alt="Foto Bersama Latihan PD IWU">
               <div class="card-body">
                 <p class="card-text">Selama 2 bulan saya mengikuti pelatihan UKM ini di GOR Padjadjaran bersama kawan-kawan semuanya.</p>
               </div>
@@ -273,7 +273,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g13.jpg" class="card-img-top" alt="Foto Bersama MPK MTsN 1 Tasikmalaya">
+              <img src="g13.jpg" class="card-img-top" alt="Foto Bersama MPK MTsN 1 Tasikmalaya">
               <div class="card-body">
                 <p class="card-text">Seorang introvert juga ingin mencoba terjun kedalam dunia kepemimpian atau keorganisasian yaitu MPK.</p>
               </div>
@@ -281,7 +281,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g14.jpg" class="card-img-top" alt="Photograper Sukahideng">
+              <img src="g14.JPG" class="card-img-top" alt="Photograper Sukahideng">
               <div class="card-body">
                 <p class="card-text">Saya dan sahabat merupakan photograper Pondok Pesantren Sukahideng yang paling jago pada masanya.</p>
               </div>
@@ -289,7 +289,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/galeri/g15.jpg" class="card-img-top" alt="Lomba antar kelas">
+              <img src="g15.jpg" class="card-img-top" alt="Lomba antar kelas">
               <div class="card-body">
                 <p class="card-text">Kami dari kelas multimedia mengikuti perlombaan senam yang diadakan oleh pihak sekolah.</p>
               </div>
@@ -314,7 +314,7 @@
             Hallo, Perkenalkan nama saya Muhammad Aditya Pratama yang sering disapa adit. Saya seorang mahasiswa Informatika di universitas wanita internasional. Sekarang, saya baru menempuh pendidikan S1 di semester 2 dan angkatan 2022. Saya lahir di Sumedang, 08 Mei 2003. Umur saya 20 tahun. 
           </div>
           <div class="col-sm-4 g-4">
-            <img src="img/profil/p1.jpg" class="border border-dark rounded-circle" alt="Profil saya" width="200">
+            <img src="p1.jpg" class="border border-dark rounded-circle" alt="Profil saya" width="200">
           </div>
           <div class="col-sm-4 g-4">
             Hobi saya adalah bermain game, menonton film, dan mengedit foto/ video. Makanan favorite saya sate dan ayam goreng. Minuman favorite saya jus alpukat. Selain itu saya juga senang dalam memodifikasi motor. Saya pernah mengikuti keorganisasian di MTs sebagai MPK dan pernah menjadi tim seksi dokumentasi di SMK. 
