--- a/e-commerce.html
+++ b/e-commerce.html
@@ -51,13 +51,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/img1.jpg" class="d-block img-fluid" alt="Gambar 1">
+            <img src="img1.jpg" class="d-block img-fluid" alt="Gambar 1">
           </div>
           <div class="carousel-item">
-            <img src="assets/img2.jpg" class="d-block img-fluid" alt="Gambar 2">
+            <img src="img2.jpg" class="d-block img-fluid" alt="Gambar 2">
           </div>
           <div class="carousel-item">
-            <img src="assets/img3.jpg" class="d-block img-fluid" alt="Gambar 3">
+            <img src="img3.jpg" class="d-block img-fluid" alt="Gambar 3">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -80,37 +80,37 @@
       <div class="row text-center row-container mt-2">
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/baju.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="baju.png" class="img-categori mt-3"></a>
             <p class="mt-2">Baju</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/celana.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="celana.png" class="img-categori mt-3"></a>
             <p class="mt-2">Celana</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/laptop.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="laptop.png" class="img-categori mt-3"></a>
             <p class="mt-2">Laptop</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/fotografi.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="fotografi.png" class="img-categori mt-3"></a>
             <p class="mt-2">Kamera</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/jamtangan.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="jamtangan.png" class="img-categori mt-3"></a>
             <p class="mt-2">Jam Tangan</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="kategori/sepatu.png" class="img-categori mt-3"></a>
+            <a href="#"><img src="sepatu.png" class="img-categori mt-3"></a>
             <p class="mt-2">Sepatu</p>
           </div>
         </div>
@@ -126,7 +126,7 @@
       <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk1.jpg" class="card-img-top" alt="Gambar Baju">
+            <img src="produk1.jpg" class="card-img-top" alt="Gambar Baju">
             <div class="card-body">
               <h6 class="card-title">M231 Kemeja Pria Polos Oxford Panjang 1552F</h6>
                 <p class="itext">Rp429.000</p>
@@ -137,7 +137,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk2.jpg" class="card-img-top" alt="Gambar Celana">
+            <img src="produk2.jpg" class="card-img-top" alt="Gambar Celana">
             <div class="card-body">
               <h6 class="card-title">CELANA PRIA CHINO Slim fit Panjang</h6>
                 <p class="itext">Rp150.000</p>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk3.jpg" class="card-img-top" alt="Gambar Keyboard">
+            <img src="produk3.jpg" class="card-img-top" alt="Gambar Keyboard">
             <div class="card-body">
               <h6 class="card-title">Keyboard Gaming MSI Mechanical Vigor GK30 RGB</h6>
                 <p class="itext">Rp419.000</p>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk4.jpg" class="card-img-top" alt="Gambar Kamera">
+            <img src="produk4.jpg" class="card-img-top" alt="Gambar Kamera">
             <div class="card-body">
               <h6 class="card-title">Canon Digital EOS 200D Mark II 18-55mm black</h6>
                 <p class="itext">Rp14.000.000</p>
@@ -170,7 +170,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk5.jpg" class="card-img-top" alt="Gambar Jam">
+            <img src="produk5.jpg" class="card-img-top" alt="Gambar Jam">
             <div class="card-body">
               <h6 class="card-title">Jam Pria Tahan Air Gastro Sport Analog casual</h6>
                 <p class="itext">Rp55.000</p>
@@ -181,7 +181,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk6.jpg" class="card-img-top" alt="Gambar Sepatu">
+            <img src="produk6.jpg" class="card-img-top" alt="Gambar Sepatu">
             <div class="card-body">
               <h6 class="card-title">Sepatu Pria/ NIKE AIR JORDAN HIGH 100 BNIB</h6>
                 <p class="itext">Rp200.000</p>
@@ -192,7 +192,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk7.jpg" class="card-img-top" alt="Gambar Headphone">
+            <img src="produk7.jpg" class="card-img-top" alt="Gambar Headphone">
             <div class="card-body">
               <h6 class="card-title">Lenovo TH10 Bluetooth</h6>
                 <p class="itext">Rp189.000</p>
@@ -203,7 +203,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk8.jpg" class="card-img-top" alt="Gambar Handphone">
+            <img src="produk8.jpg" class="card-img-top" alt="Gambar Handphone">
             <div class="card-body">
               <h6 class="card-title">5G VIVO IP13 Pro max 7.5 inc</h6>
                 <p class="itext">Rp850.000</p>
@@ -214,7 +214,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk9.jpg" class="card-img-top" alt="Gambar Mouse">
+            <img src="produk9.jpg" class="card-img-top" alt="Gambar Mouse">
             <div class="card-body">
               <h6 class="card-title">LOGITECH MOUSE WIRELESS</h6>
                 <p class="itext">Rp300.000</p>
@@ -225,7 +225,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk10.jpg" class="card-img-top" alt="Gambar Laptop">
+            <img src="produk10.jpg" class="card-img-top" alt="Gambar Laptop">
             <div class="card-body">
               <h6 class="card-title">Macbook Pro 13inc i7 16GB</h6>
                 <p class="itext">Rp8.000.000</p>
@@ -236,7 +236,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk11.jpg" class="card-img-top" alt="Gambar Tas">
+            <img src="produk11.jpg" class="card-img-top" alt="Gambar Tas">
             <div class="card-body">
               <h6 class="card-title">Tas Brevite The Jumper Photo</h6>
                 <p class="itext">Rp10.500.000</p>
@@ -247,7 +247,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-4 col-6 mt-3">
           <div class="card">
-            <img src="produk/produk12.jpg" class="card-img-top" alt="Gambar Lensa">
+            <img src="produk12.jpg" class="card-img-top" alt="Gambar Lensa">
             <div class="card-body">
               <h6 class="card-title">Canon 24-70mm F2.8 L</h6>
                 <p class="itext">Rp8.500.000</p>
