--- a/e-commerce.html
+++ b/e-commerce.html
@@ -279,13 +279,13 @@
           </div>
           <div class="col-md-6 text-md-end text-center pt-3 pb-3">
             <a target="_blank" href="https://web.facebook.com/profile.php?id=100014591779124">
-              <img src="somedia/facebook.png" class="ms-2" width="32px">
+              <img src="facebook.png" class="ms-2" width="32px">
             </a>
             <a target="_blank" href="https://www.instagram.com/mhmmdap_08/">
-              <img src="somedia/instagram.png" class="ms-2" width="30px">
+              <img src="instagram.png" class="ms-2" width="30px">
             </a>
             <a target="_blank" href="https://github.com/Tamadita">
-              <img src="somedia/git.png" class="ms-2" width="31px">
+              <img src="git.png" class="ms-2" width="31px">
             </a>
           </div>
         </div>
